# YouCompleteMe

./: .coveragerc  .gitignore  .gitmodules  .mergify.yml  .readme.utf-8.add  .travis.yml  .vimspector.json  .ycm.py  .ycm_extra_conf.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Vagrantfile  appveyor.yml  azure-pipelines.yml  codecov.yml  index.html  install.py  install.sh  params.json  print_todos.sh  pyrightconfig.json  pytest.ini  requirements.txt  run_tests.py  run_tests.sh  style_format.sh  tox.ini  update-vim-docs  update_boost.sh  update_from_readme.py  vagrant_bootstrap.sh  vim_config.json  vimrc_ycm_minimal  vimrc_ycm_minimal_package
cpp/: CMakeLists.txt  Candidate.cpp  Candidate.h  Completer.cpp  Completer.h  ConcurrentStack.h  LetterHash.cpp  LetterHash.h  LetterNode.cpp  LetterNode.h  Makefile  Result.cpp  Result.h  RootLetterNode.h  Utils.cpp  Utils.h  indexer.cpp  standard.h
cpp/BoostParts/: CMakeLists.txt
cpp/BoostParts/boost/: assert.hpp  atomic.hpp  cstdint.hpp  foreach.hpp  foreach_fwd.hpp  integer_traits.hpp  lexical_cast.hpp  multi_index_container.hpp  rational.hpp  static_assert.hpp  throw_exception.hpp  type_traits.hpp  version.hpp
cpp/BoostParts/boost/algorithm/: string_regex.hpp
cpp/BoostParts/boost/archive/: archive_exception.hpp  basic_archive.hpp  shared_ptr_helper.hpp
cpp/BoostParts/boost/atomic/: atomic.hpp
cpp/BoostParts/boost/chrono/: config.hpp  duration.hpp  system_clocks.hpp  time_point.hpp
cpp/BoostParts/boost/circular_buffer/: base.hpp  details.hpp  space_optimized.hpp
cpp/BoostParts/boost/config/: auto_link.hpp  select_compiler_config.hpp  suffix.hpp
cpp/BoostParts/boost/container/: allocator_traits.hpp  container_fwd.hpp  map.hpp  scoped_allocator.hpp  scoped_allocator_fwd.hpp  throw_exception.hpp
cpp/BoostParts/boost/date_time/: c_time.hpp  date_formatting.hpp  filetime_functions.hpp  format_date_parser.hpp  gregorian_calendar.ipp  strings_from_facet.hpp
cpp/BoostParts/boost/detail/: endian.hpp  interlocked.hpp  scoped_enum_emulation.hpp
cpp/BoostParts/boost/exception/: all.hpp  diagnostic_information.hpp  errinfo_errno.hpp  error_info.hpp  exception.hpp  info.hpp  info_tuple.hpp
cpp/BoostParts/boost/function/: function_template.hpp
cpp/BoostParts/boost/graph/: adjacency_list.hpp  breadth_first_search.hpp  graph_concepts.hpp  graph_traits.hpp  named_function_params.hpp  named_graph.hpp  properties.hpp  reverse_graph.hpp  visitors.hpp
cpp/BoostParts/boost/interprocess/: errors.hpp  mapped_region.hpp  offset_ptr.hpp  segment_manager.hpp  shared_memory_object.hpp
cpp/BoostParts/boost/intrusive/: circular_slist_algorithms.hpp  intrusive_fwd.hpp  linear_slist_algorithms.hpp  link_mode.hpp  options.hpp  pointer_plus_bits.hpp  pointer_traits.hpp  rbtree.hpp  rbtree_algorithms.hpp  set.hpp  set_hook.hpp  slist.hpp  slist_hook.hpp
cpp/BoostParts/boost/iterator/: iterator_facade.hpp
cpp/BoostParts/boost/lockfree/: queue.hpp  spsc_queue.hpp  stack.hpp
cpp/BoostParts/boost/move/: algorithm.hpp  core.hpp  move.hpp  traits.hpp  utility.hpp
cpp/BoostParts/boost/mpi/: collectives.hpp  communicator.hpp  config.hpp  environment.hpp  packed_iarchive.hpp  packed_oarchive.hpp
cpp/BoostParts/boost/mpl/: assert.hpp  back.hpp  base.hpp  begin.hpp  empty.hpp  end.hpp  erase_fwd.hpp  erase_key_fwd.hpp  front.hpp  has_key.hpp  has_key_fwd.hpp  insert_fwd.hpp  iterator_category.hpp  joint_view.hpp  key_type_fwd.hpp  min_max.hpp  pair_view.hpp  pop_front.hpp  print.hpp  reverse_iter_fold.hpp  single_view.hpp  transform.hpp  value_type_fwd.hpp
cpp/BoostParts/boost/multi_index/: hashed_index.hpp  ordered_index.hpp  sequenced_index.hpp
cpp/llvm/: .gitignore
cpp/llvm/docs/: AliasAnalysis.html  BitCodeFormat.html  Bugpoint.html  CodeGenerator.html  CodingStandards.html  CommandLine.html  CompilerWriterInfo.html  DebuggingJITedCode.html  DeveloperPolicy.html  ExceptionHandling.html  ExtendingLLVM.html  FAQ.html  GCCFEBuildInstrs.html  GarbageCollection.html  GetElementPtr.html  GettingStarted.html  GettingStartedVS.html  HowToReleaseLLVM.html  HowToSubmitABug.html  LangRef.html  Lexicon.html  LinkTimeOptimization.html  MakefileGuide.html  Packaging.html  Passes.html  ProgrammersManual.html  Projects.html  ReleaseNotes.html  SourceLevelDebugging.html  SystemLibrary.html  TableGenFundamentals.html  TestingGuide.html  WritingAnLLVMBackend.html  WritingAnLLVMPass.html  index.html
cpp/tests/: CMakeLists.txt  Candidate_test.cpp  Completer_test.cpp  IndexForChar_test.cpp  IsUppercase_test.cpp  LetterBitsetFromString_test.cpp
cpp/tests/gmock/: Makefile.in  aclocal.m4  configure
cpp/ycm/: .ycm_clang_options.py  .ycm_extra_conf.py  CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateRepository.cpp  CandidateRepository.h  ClangComplete.cpp  ClangComplete.h  ClangCompleter.cpp  ClangCompleter.h  ClangResultsCache.cpp  ClangResultsCache.h  ClangUtils.cpp  ClangUtils.h  Completer.cpp  Completer.h  CompletionData.cpp  CompletionData.h  ConcurrentLatestValue.h  ConcurrentStack.h  CustomAssert.cpp  CustomAssert.h  Diagnostic.h  Future.cpp  Future.h  IdentifierCompleter.cpp  IdentifierCompleter.h  IdentifierDatabase.cpp  IdentifierDatabase.h  IdentifierUtils.cpp  IdentifierUtils.h  LetterHash.cpp  LetterHash.h  LetterNode.cpp  LetterNode.h  LetterNodeListMap.cpp  LetterNodeListMap.h  MatchingUtils.cpp  MatchingUtils.h  (+18 more)
cpp/ycm/ClangCompleter/: ClangCompleter.cpp  ClangCompleter.h  ClangHelpers.cpp  ClangHelpers.h  ClangResultsCache.cpp  ClangResultsCache.h  ClangUtils.cpp  ClangUtils.h  CompilationDatabase.cpp  CompilationDatabase.h  CompletionData.cpp  CompletionData.h  Diagnostic.h  Location.h  Range.cpp  Range.h  TranslationUnit.cpp  TranslationUnit.h  TranslationUnitStore.cpp  TranslationUnitStore.h  UnsavedFile.h
cpp/ycm/tests/: CMakeLists.txt  CandidateRepository_test.cpp  Candidate_test.cpp  ClangCompleter_test.cpp  ClangUtils_test.cpp  Completer_test.cpp  IdentifierCompleter_test.cpp  IdentifierUtils_test.cpp  IndexForChar_test.cpp  IsUppercase_test.cpp  LetterBitsetFromString_test.cpp  TestUtils.cpp  TestUtils.h  main.cpp
(+624 files in other folders)
